[metadata]
name = cnkalman
version = 0.1.0
author = Justin Berger
author_email = jdavidberger@gmail.com
description = Support tools for cnkalman
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    sympy
    symengine
    cmake

[options.packages.find]
where = .
